--- a/ProvincialParks.UnitTests/ProvincialParks.UnitTests.csproj
+++ b/ProvincialParks.UnitTests/ProvincialParks.UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CampingTripTests.cs" />
+    <Compile Include="CampingTripExpenseCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProvincialParks.CampingApp\ProvincialParks.CampingApp.csproj">
